@@ -19,7 +19,6 @@ import org.springframework.context.annotation.Lazy;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 
-import site.config.Globals;
 import site.controller.invoice.InvoiceLanguage;
 import site.controller.ticket.TicketData;
 import site.controller.ticket.TicketDetail;
@@ -45,8 +44,11 @@ public class TicketService {
     @Autowired
     private BackgroundJobService jobService;
 
+    @Autowired
+    private BranchService branchService;
+
     /**
-     * Sends tickets to all visitors which have been paid or are sponsored.
+     * Sends tickets to all visitors that have been paid or are sponsored.
      *
      * @return True if tickets are sent using a background job
      */
@@ -62,8 +64,8 @@ public class TicketService {
         if (pendingVisitorsMap.values().stream().mapToLong(Collection::size).sum() > 3) {
             String jobId = jobService.createBackgroundJob("Sending emails with tickets.");
             jobService.runJob(jobId,
-                pendingVisitorsMap.values().stream().flatMap(Collection::stream).collect(Collectors.toList()),
-                this::sendEmail, this::emailErrorLog);
+                pendingVisitorsMap.values().stream().flatMap(Collection::stream).toList(), this::sendEmail,
+                this::emailErrorLog);
             return true;
         } else {
             pendingVisitorsMap.forEach(this::generateAndSendTicketEmail);
@@ -84,7 +86,7 @@ public class TicketService {
 
     /**
      * Generates and sends a ticket email message for each visitor in the list. The provided email is used
-     * as receiver for all ticket messages
+     * as a receiver for all ticket messages
      *
      * @param email    the receiver of the email messages
      * @param visitors list of the visitors for which a ticket email message will be generated
@@ -94,12 +96,14 @@ public class TicketService {
     public List<Pair<Visitor, Boolean>> generateAndSendTicketEmail(String email, List<Visitor> visitors) {
         List<Pair<Visitor, Pair<byte[], byte[]>>> ticketPdfs = visitors.stream().map(visitor -> {
             TicketData ticketData = new TicketData();
-            ticketData.setEvent("JPrime " + Globals.CURRENT_BRANCH);
+            ticketData.setEvent("JPrime " + branchService.getCurrentBranch().getYear());
             ticketData.setOrganizer("JPrime Events");
-            String ticketNumber = StringUtils.isEmpty(visitor.getTicket()) ? UUID.randomUUID().toString() : visitor.getTicket();
+            String ticketNumber =
+                StringUtils.isEmpty(visitor.getTicket()) ? UUID.randomUUID().toString() : visitor.getTicket();
             ticketData.addDetail(new TicketDetail(ticketNumber, visitor.getName(), "Visitor"));
             visitor.setTicket(ticketNumber);
-            return Pair.of(visitor, Pair.of(ticketExporter.exportTicket(ticketData, InvoiceLanguage.EN), ticketExporter.generateTicketQrCode(ticketData)));
+            return Pair.of(visitor, Pair.of(ticketExporter.exportTicket(ticketData, InvoiceLanguage.EN),
+                ticketExporter.generateTicketQrCode(ticketData)));
         }).toList();
 
         return ticketPdfs.stream().map(p -> {
@@ -108,9 +112,10 @@ public class TicketService {
             byte[] ticketPdf = binaryPair.getKey();
             byte[] qrImage = binaryPair.getValue();
             try {
-                mailFacade.sendEmail(email, "JPrime " + Globals.CURRENT_BRANCH + " Conference ticket !",
+                mailFacade.sendEmail(email, "JPrime " + branchService.getCurrentBranch().getYear() + " Conference ticket !",
                     ticketMessage(visitor),
-                    new Attachment(ticketPdf, "ticket_" + visitor.getId() + ".pdf", "utf-8", false, "application/pdf"),
+                    new Attachment(ticketPdf, "ticket_" + visitor.getId() + ".pdf", "utf-8", false,
+                        "application/pdf"),
                     new Attachment(qrImage, "ticket_qr.png", "utf-8", true, MediaType.IMAGE_PNG_VALUE));
                 adminFacade.saveVisitor(visitor);
                 return Pair.of(visitor, true);
@@ -118,27 +123,26 @@ public class TicketService {
                 log.error("Unable to send ticket {} to {}", visitor.getTicket(), email);
                 return Pair.of(visitor, false);
             }
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private String ticketMessage(Visitor visitor) {
-        return String.format(
-            """
-jPrime %s is here !<br/>
-You will find attached to this email message your ticket for the event. Please be ready to show it on your mobile phone on the registration.\s
-You can also print it if it will be more convenient to you.<br/>
- \
-The registration is open on the first day morning. We would advise you to come early.<br/>
-Some other information :<br/>
-Location : <a href='https://jprime.io/venue' target='_blank'>Sofia Tech Park</a><br/>
-Your name : %s<br/>
-Your ticket ID : %s <br/>
-<img alt="logo" src="cid:ticket_qr.png"/>
-<br/>\
-The conference website : <a href='https://jprime.io/' target='_blank'>https://jprime.io</a><br/><br/>
-And finally, if for some reason you cannot come, a friend of yours or a colleague or someone can use your ticket.<br/><br/>
-See you at jPrime !<br/>
-The Gang of 6 of the Bulgarian Java User Group""",
-            Globals.CURRENT_BRANCH, visitor.getName(), visitor.getTicket());
+        return String.format("""
+                jPrime %d is here !<br/>
+                You will find attached to this email message your ticket for the event. Please be ready to show it on your mobile phone on the registration.\s
+                You can also print it if it will be more convenient to you.<br/>
+                 \
+                The registration is open on the first day morning. We would advise you to come early.<br/>
+                Some other information :<br/>
+                Location : <a href='https://jprime.io/venue' target='_blank'>Sofia Tech Park</a><br/>
+                Your name : %s<br/>
+                Your ticket ID : %s <br/>
+                <img alt="logo" src="cid:ticket_qr.png"/>
+                <br/>\
+                The conference website : <a href='https://jprime.io/' target='_blank'>https://jprime.io</a><br/><br/>
+                And finally, if for some reason you cannot come, a friend of yours or a colleague or someone can use your ticket.<br/><br/>
+                See you at jPrime !<br/>
+                The Gang of 6 of the Bulgarian Java User Group""", branchService.getCurrentBranch().getYear(), visitor.getName(),
+            visitor.getTicket());
     }
 }
